--- a/index.html
+++ b/index.html
@@ -1,20 +1,33 @@
 <!doctype html>
-<html ng-app>
+<html ng-app="ShmitaApp">
 	<head>
 		<link href="css/bootstrap.min.css" rel="stylesheet" />
 		<link href="css/bootstrap-theme.min.css" rel="stylesheet" />
 		<link href="css/styles.css" rel="stylesheet" />
 	</head>
-	<body>
+	<body ng-class="{'menu-open': menuOpen}" ng-controller="MainController">
 		<header>
-			<a class="nav-menu-button" href="#" ng-click="">&#9776;</a>
+			<a class="nav-menu-button" ng-click="toggleMenu()">&#9776;</a>
+			<button type="button" class="btn btn-default nav-lang" ng-cloak ng-click="switchLanguage()">{{ languageLabel() }}</button>
 		</header>
-		<ul class="nav nav-pills nav-stacked">
-			<li class="active"><a href="#">Home</a></li>
-			<li><a href="#">Profile</a></li>
-			<li><a href="#">Messages</a></li>
-		</ul>
+		<section class="main">
+			<nav nav-click>
+				<ul class="nav nav-pills nav-stacked">
+					<li ng-repeat="navItem in nav"><a href="#/{{navItem.route}}">{{navItem.name}}</a></li>
+				</ul>
+			</nav>
+			<div class="content">
+				<ng-view></ng-view>
+			</div>
+		</section>
 	</body>
-	<script src="js/angular.min.js" type="text/javascript"></script>
+	<script src="//ajax.googleapis.com/ajax/libs/angularjs/1.3.5/angular.js" type="text/javascript"></script>
+	<script src="//ajax.googleapis.com/ajax/libs/angularjs/1.3.5/angular-route.js"></script>
+	<script src="js/hebrewdate.js" type="text/javascript"></script>
+	<script src="js/app.js" type="text/javascript"></script>
+	<script src="js/utils.js" type="text/javascript"></script>
+	<script src="js/lang.js" type="text/javascript"></script>
+	<script src="js/csv.js" type="text/javascript"></script>
+	<script src="js/status.js" type="text/javascript"></script>
 	<script src="js/script.js" type="text/javascript"></script>
 </html>
