--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<link href="css/bootstrap.min.css" rel="stylesheet" />
 		<link href="css/bootstrap-theme.min.css" rel="stylesheet" />
 		<link href="css/styles.css" rel="stylesheet" />
-<meta charset="utf-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	</head>
 	<body ng-class="{'menu-open': menuOpen}" ng-controller="MainController">
 		<header>
@@ -22,8 +22,8 @@
 			</div>
 		</section>
 	</body>
-	<script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.3.5/angular.js" type="text/javascript"></script>
-	<script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.3.5/angular-route.js"></script>
+	<script src="//ajax.googleapis.com/ajax/libs/angularjs/1.3.5/angular.js" type="text/javascript"></script>
+	<script src="//ajax.googleapis.com/ajax/libs/angularjs/1.3.5/angular-route.js"></script>
 	<script src="js/hebrewdate.js" type="text/javascript"></script>
 	<script src="js/app.js" type="text/javascript"></script>
 	<script src="js/utils.js" type="text/javascript"></script>
