--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
 	</head>
 	<body ng-class="{'menu-open': menuOpen}" ng-controller="MainController">
 		<header>
-			<a class="nav-menu-button" ng-click="toggleMenu()">&#9776;</a>
+			<ul class="nav nav-pills">
+				<li ng-repeat="navItem in nav" role="presentation" ng-class="{active: navItem.active}" class="topnav"><a href="#/{{navItem.route}}">{{navItem.name}}</a></li>
+			</ul>
 			<button type="button" class="btn btn-default nav-lang" ng-cloak ng-click="switchLanguage()">{{ languageLabel() }}</button>
 		</header>
 		<section class="main">
@@ -22,8 +24,8 @@
 			</div>
 		</section>
 	</body>
-	<script src="//ajax.googleapis.com/ajax/libs/angularjs/1.3.5/angular.js" type="text/javascript"></script>
-	<script src="//ajax.googleapis.com/ajax/libs/angularjs/1.3.5/angular-route.js"></script>
+	<script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.3.5/angular.js" type="text/javascript"></script>
+	<script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.3.5/angular-route.js"></script>
 	<script src="js/hebrewdate.js" type="text/javascript"></script>
 	<script src="js/app.js" type="text/javascript"></script>
 	<script src="js/utils.js" type="text/javascript"></script>
