--- a/pages/home.html
+++ b/pages/home.html
@@ -1,5 +1,5 @@
 <div ng-if="language === 'English'">
-    <p class=about-heading>
+    <p class="about-heading">
         <img src="icon.png"> Shmita Table
     </p>
     <p>
