--- a/pages/status.html
+++ b/pages/status.html
@@ -1,5 +1,6 @@
 <ul class="nav nav-pills">
-	<li ng-repeat="navItem in statusNav" role="presentation" ng-class="{active: navItem.active}"><a href="#/status/{{navItem.route}}">{{navItem.name}}</a></li>
+	<li ng-repeat="navItem in statusNav" role="presentation" ng-class="{active: navItem.active}" ng-if="language === 'English'"><a href="#/status/{{navItem.route}}">{{navItem.English}}</a></li>
+	<li ng-repeat="navItem in statusNav" role="presentation" ng-class="{active: navItem.active}" ng-if="language === 'Hebrew'"><a href="#/status/{{navItem.route}}">{{navItem.Hebrew}}</a></li>
 </ul>
 <ul>
 	<li ng-repeat="food in foodList" class="{{food.Type}}">{{getTranslation(food)}}</li>
