--- a/index.html
+++ b/index.html
@@ -37,5 +37,6 @@
 	<script src="js/lang.js" type="text/javascript"></script>
 	<script src="js/csv.js" type="text/javascript"></script>
 	<script src="js/status.js" type="text/javascript"></script>
+	<script src="js/species.js" type="text/javascript"></script>
 	<script src="js/script.js" type="text/javascript"></script>
 </html>
