--- a/index.html
+++ b/index.html
@@ -31,6 +31,8 @@
 	</body>
 	<script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.3.5/angular.js" type="text/javascript"></script>
 	<script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.3.5/angular-route.js"></script>
+	<script src="js/jquery-2.1.1.min.js" type="text/javascript"></script>
+	<script src="js/jquery.csv-0.71.min.js" type="text/javascript"></script>
 	<script src="js/hebrewdate.js" type="text/javascript"></script>
 	<script src="js/app.js" type="text/javascript"></script>
 	<script src="js/utils.js" type="text/javascript"></script>
