--- a/pages/species.html
+++ b/pages/species.html
@@ -14,6 +14,6 @@
 		<input ng-model="query" type="text" placeholder="סנן לפי" autofocus>
 	</form>
 	<ul>
-		<li ng-repeat="food in foodList | filter:{English:query} | orderBy: 'Hebrew' " class="{{food.Type}}">{{getTranslation(food)}}</li>
+		<li ng-repeat="food in foodList | filter:{Hebrew:query} | orderBy: 'Hebrew' " class="{{food.Type}}">{{getTranslation(food)}}</li>
 	</ul>
 </div>
