--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
 	<script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.3.5/angular-route.js"></script>
 	<script src="js/jquery-2.1.1.min.js" type="text/javascript"></script>
 	<script src="js/jquery.csv-0.71.min.js" type="text/javascript"></script>
+	<script src="js/ngDialog.min.js" type="text/javascript"></script>
 	<script src="js/hebrewdate.js" type="text/javascript"></script>
 	<script src="js/app.js" type="text/javascript"></script>
 	<script src="js/utils.js" type="text/javascript"></script>
@@ -41,4 +42,10 @@
 	<script src="js/status.js" type="text/javascript"></script>
 	<script src="js/species.js" type="text/javascript"></script>
 	<script src="js/script.js" type="text/javascript"></script>
+<script src="js/vex.combined.min.js"></script>
+<script>
+vex.defaultOptions.className = 'vex-theme-os';
+</script>
+<link rel="stylesheet" href="css/vex.css" />
+<link rel="stylesheet" href="css/vex-theme-os.css" />
 </html>
