--- a/pages/species.html
+++ b/pages/species.html
@@ -4,7 +4,7 @@
 	<form class="form-inline">
 		<input ng-model="query" type="text" placeholder="Filter by" autofocus>
 	</form>
-	<ul>
+	<ul style="line-height:220%">
 		<li ng-repeat="food in foodList | filter:{English:query} | orderBy: 'English' " class="{{food.Type}}"><div style="display: inline-block;" ng-click="dialogEn(food);">{{getTranslation(food)}}</div></li>
 	</ul>
 </div>
@@ -13,7 +13,7 @@
 	<form class="form-inline">
 		<input ng-model="query" type="text" placeholder="סנן לפי" autofocus>
 	</form>
-	<ul>
+	<ul style="line-height:220%">
 		<li ng-repeat="food in foodList | filter:{Hebrew:query} | orderBy: 'Hebrew' " class="{{food.Type}}"><div style="display: inline-block;" ng-click="dialogHe(food);">{{getTranslation(food)}}</div></li>
 	</ul>
 </div>
