--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
 	<script src="js/utils.js" type="text/javascript"></script>
 	<script src="js/lang.js" type="text/javascript"></script>
 	<script src="js/csv.js" type="text/javascript"></script>
+	<script src="js/import.js" type="text/javascript"></script>
 	<script src="js/status.js" type="text/javascript"></script>
 	<script src="js/species.js" type="text/javascript"></script>
 	<script src="js/script.js" type="text/javascript"></script>
