--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
 	<script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.3.5/angular-route.js"></script>
 	<script src="js/jquery-2.1.1.min.js" type="text/javascript"></script>
 	<script src="js/jquery.csv-0.71.min.js" type="text/javascript"></script>
+	<script src="js/FileSaver.min.js" type="text/javascript"></script>
 	<script src="js/ngDialog.min.js" type="text/javascript"></script>
 	<script src="js/hebrewdate.js" type="text/javascript"></script>
 	<script src="js/app.js" type="text/javascript"></script>
