--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
 	<script src="js/import.js" type="text/javascript"></script>
 	<script src="js/status.js" type="text/javascript"></script>
 	<script src="js/species.js" type="text/javascript"></script>
+	<script src="js/calendar.js" type="text/javascript"></script>
 	<script src="js/script.js" type="text/javascript"></script>
 <script src="js/vex.combined.min.js"></script>
 <script>
