--- a/pages/home.html
+++ b/pages/home.html
@@ -3,7 +3,7 @@
         <img src="icon.png"> Shmita Table
     </p>
 <button type="button" class="btn nav-lang" ng-cloak ng-click="switchLanguage()">{{ languageLabel() }}</button>
-<p>This app displays the shmita status of each species of fruit and vegetable based on the current date. Fruits are displayed in <span class="fruit">purple</span> text, and vegetables in <span class="vegetable">green</span> text. Other foods (like grains and spices) are in <span style="font-weight:bold">black</span>.</p>
+<p>Click on a tab above to display the shmita status of each species of fruit and vegetable based on the current date. Fruits are displayed in <span class="fruit">purple</span> text, and vegetables in <span class="vegetable">green</span> text. Other foods (like grains and spices) are in <span style="font-weight:bold">black</span>.</p>
 <p>In addition, you can download a calendar file, which can be imported to Google Calendar or another calendar program. It will alert you whenever the status of a food changes.</p>
 <p>A brief overview of the statuses:
 <ul><li><span style="font-weight:bold">Kedushat shviit</span> ("Kedushah"): Produce which grew in the Land of Israel during the shmita year. This produce must be eaten rather than wasted or destroyed. There are also restrictions on how you can farm and buy/sell this produce. Therefore, when a species has Kedushah, you must make sure to either obtain and consume it in acceptable ways (like "otzar beit din"), or else rely on a loophole (like "heter mechira" or "yevul nochri") so that the actual produce you buy does not have Kedushah.</li>
