Add bootstrap class to button

--- a/pages/calendar.html
+++ b/pages/calendar.html
@@ -1,5 +1,5 @@
 <div ng-if="language === 'English'">
-	To download calendar, click the button. <button ng-click="getCalendar()">Get calendar</button>
+	To download calendar, click the button. <button class="btn" ng-click="getCalendar()">Get calendar</button>
 <p>
 This is an ICAL calendar file that can be added to any calendar application (Outlook, Google Calendar, etc.). It will then alert you whenever the shmita status of any food changes.
 <p>
@@ -20,7 +20,7 @@ To use this calendar, follow these steps:
 </div>
 <div ng-if="language === 'Hebrew'" style="direction: rtl;">
 כדי להוריד את יומן, יש ללחוץ על הכפתור:
-<button ng-click="getCalendar()">הוסף יומן</button>
+<button class="btn" ng-click="getCalendar()">הוסף יומן</button>
 <p>
 זה קובץ ICAL שניתן להוסיף אותו לכל אפליקציית לוח שנה (Outlook, Google Calendar וכו'), והוא יודיע לך על כל שינוי סטטוס של מאכל בשנת השמיטה.
 <p>
